--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
     </head>
 
     <body>
-
-        <button type="button" id="btn-Google"></button>>Open Google.com</button>
-        <scripts src="scripts.js"></scripts>
-        <p> this is google</p>
-        <h1> hi 1</h1>
-        <span>this is span tag</span>
-        <span>this is span tag</span>
-        <a href='https://www.google.com' target=_blank> click here to google</a>
         <form>
-            <label></label>
+            <lable for ='first name'>first name</lable><br>
+            <input type='first name'name=''id='firstname'><br>
+            <lable for ='middle name'>middle name</lable><br>
+            <input type='middle name'name=''id='middle name'><br>
+            <lable for ='last name'>last name</lable><br>
+            <input type='last name'name=''id='last name'><br>
+            <lable for ='email'>email</lable><br>
+            <input type='email'name=''id='email'><br>
+            <lable for='password'>password</lable><br>
+            <input type='password'name=''id='password'><br>
+            <lable for='gender'>gender</lable><br>
+            <input type='gender'name=''id='gender'><br>
+            <lable for='upload a file'>upload a file</lable><br>
+            <input type='upload a file'name=''id='upload a file'><br>
+            <input type="submit"name=''id='submit'>
+
+
         </form>
 
+        
 
     </body>
 
 
 </html>
+
